initial commit phase 3