@@ -1,6 +1,7 @@
 package network.zenon;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class ZnnPaths {
     public static ZnnPaths DEFAULT = getDefault();
@@ -8,23 +9,21 @@ public class ZnnPaths {
     public static ZnnPaths getDefault() {
         String osName = System.getProperty("os.name");
         osName = osName != null ? osName.toLowerCase() : "";
-        
+
         Path main;
-        
+
         if (osName.contains("nix") || osName.contains("nux") || osName.contains("aix")) {
-            main = Path.of(System.getenv("HOME"), "." + Constants.ZNN_ROOT_DIRECTORY);
+            main = Paths.get(System.getenv("HOME"), "." + Constants.ZNN_ROOT_DIRECTORY);
         } else if (osName.contains("mac")) {
-            main = Path.of(System.getenv("HOME"), "Library", Constants.ZNN_ROOT_DIRECTORY);
+            main = Paths.get(System.getenv("HOME"), "Library", Constants.ZNN_ROOT_DIRECTORY);
         } else if (osName.contains("win")) {
-            main = Path.of(System.getenv("APPDATA"), Constants.ZNN_ROOT_DIRECTORY);
+            main = Paths.get(System.getenv("APPDATA"), Constants.ZNN_ROOT_DIRECTORY);
         } else {
-            main = Path.of(System.getenv("HOME"), Constants.ZNN_ROOT_DIRECTORY);
+            main = Paths.get(System.getenv("HOME"), Constants.ZNN_ROOT_DIRECTORY);
         }
 
-        return new ZnnPaths(
-            main.toString().toLowerCase(), 
-            main.resolve("wallet").toString().toLowerCase(),
-            main.resolve("syrius").toString().toLowerCase());
+        return new ZnnPaths(main.toString().toLowerCase(), main.resolve("wallet").toString().toLowerCase(),
+                main.resolve("syrius").toString().toLowerCase());
     }
 
     private final String main;
