@@ -2,6 +2,7 @@ package network.zenon.model.embedded;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import network.zenon.model.JsonConvertible;
 import network.zenon.model.embedded.json.JFusionEntryList;
@@ -16,7 +17,8 @@ public class FusionEntryList implements JsonConvertible<JFusionEntryList> {
         this.qsrAmount = json.qsrAmount;
         this.count = json.count;
         this.list = json.list != null
-                ? Collections.unmodifiableList(json.list.stream().map(x -> new FusionEntry(x)).toList())
+                ? Collections
+                        .unmodifiableList(json.list.stream().map(x -> new FusionEntry(x)).collect(Collectors.toList()))
                 : Collections.emptyList();
     }
 
@@ -43,7 +45,7 @@ public class FusionEntryList implements JsonConvertible<JFusionEntryList> {
         JFusionEntryList json = new JFusionEntryList();
         json.qsrAmount = this.qsrAmount;
         json.count = this.count;
-        json.list = this.list.stream().map(FusionEntry::toJson).toList();
+        json.list = this.list.stream().map(FusionEntry::toJson).collect(Collectors.toList());
         return json;
     }
 
