@@ -2,6 +2,7 @@ package network.zenon.model.nom;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import network.zenon.model.JsonConvertible;
 import network.zenon.model.nom.json.JMomentumList;
@@ -14,7 +15,8 @@ public class MomentumList implements JsonConvertible<JMomentumList> {
     public MomentumList(JMomentumList json) {
         this.count = json.count;
         this.list = json.list != null
-                ? Collections.unmodifiableList(json.list.stream().map(x -> new Momentum(x)).toList())
+                ? Collections
+                        .unmodifiableList(json.list.stream().map(x -> new Momentum(x)).collect(Collectors.toList()))
                 : Collections.emptyList();
     }
 
@@ -35,7 +37,7 @@ public class MomentumList implements JsonConvertible<JMomentumList> {
     public JMomentumList toJson() {
         JMomentumList json = new JMomentumList();
         json.count = this.count;
-        json.list = this.list.stream().map(Momentum::toJson).toList();
+        json.list = this.list.stream().map(Momentum::toJson).collect(Collectors.toList());
         return json;
     }
 
